REFACTOR (backend): Fetch the avatar url directly in the query